fix: fix z-indexes

--- a/client/src/styles/components/userAuthForm.scss
+++ b/client/src/styles/components/userAuthForm.scss
@@ -9,6 +9,7 @@
   position: absolute;
   left: 0;
   top: 0;
+  z-index: 99999;
 
   &.active {
     display: flex;
